--- a/first_week/11_09_wholesale_retail_business_key.ipynb
+++ b/first_week/11_09_wholesale_retail_business_key.ipynb
@@ -11,78 +11,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "026153bf",
+   "execution_count": 12,
+   "id": "e967475d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "❌ .env에 wholesale_retail_business_key / WEHAGO_WSID / WEHAGO_USER 가 모두 필요합니다.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     11\u001b[39m user = os.getenv(\u001b[33m\"\u001b[39m\u001b[33mWEHAGO_USER\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m api_key \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m wsid \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m user:\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33m❌ .env에 wholesale_retail_business_key / WEHAGO_WSID / WEHAGO_USER 가 모두 필요합니다.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     16\u001b[39m BASE_URL = \u001b[33m\"\u001b[39m\u001b[33mhttps://dataapi.wehago.com/data\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     17\u001b[39m headers = {\n\u001b[32m     18\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mapicode\u001b[39m\u001b[33m\"\u001b[39m: api_key,\n\u001b[32m     19\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mwsid\u001b[39m\u001b[33m\"\u001b[39m: wsid,\n\u001b[32m     20\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mreq_user_id\u001b[39m\u001b[33m\"\u001b[39m: user\n\u001b[32m     21\u001b[39m }\n",
+      "\u001b[31mValueError\u001b[39m: ❌ .env에 wholesale_retail_business_key / WEHAGO_WSID / WEHAGO_USER 가 모두 필요합니다."
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import time\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "api_key = os.getenv(\"wholesale_retail_business_key\")\n",
+    "wsid = os.getenv(\"WEHAGO_WSID\")\n",
+    "user = os.getenv(\"WEHAGO_USER\")\n",
+    "\n",
+    "if not api_key or not wsid or not user:\n",
+    "    raise ValueError(\"❌ .env에 wholesale_retail_business_key / WEHAGO_WSID / WEHAGO_USER 가 모두 필요합니다.\")\n",
+    "\n",
+    "BASE_URL = \"https://dataapi.wehago.com/data\"\n",
+    "headers = {\n",
+    "    \"apicode\": api_key,\n",
+    "    \"wsid\": wsid,\n",
+    "    \"req_user_id\": user\n",
+    "}\n",
+    "\n",
+    "all_rows = []\n",
+    "start = 0\n",
+    "step = 500\n",
+    "\n",
+    "while True:\n",
+    "    params = {\n",
+    "        \"dataset_key\": \"DATASET_SUNDO_52\",\n",
+    "        \"from\": start,\n",
+    "        \"to\": start + step - 1\n",
+    "    }\n",
+    "\n",
+    "    r = requests.get(BASE_URL, headers=headers, params=params)\n",
+    "    payload = r.json()\n",
+    "    chunk = payload.get(\"data\")\n",
+    "\n",
+    "    if not chunk:\n",
+    "        print(\"✅ 데이터 수집 완료\")\n",
+    "        break\n",
+    "\n",
+    "    all_rows.extend(chunk)\n",
+    "    start += step\n",
+    "    time.sleep(0.1)\n",
+    "\n",
+    "df = pd.DataFrame(all_rows)\n",
+    "df.to_csv(\"읍면동_도소매업.csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "print(\"🎉 저장 완료 → 읍면동_도소매업.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "96e15db1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📦 데이터 수집 시작\n",
-      "→ 요청 구간: 0 ~ 499\n",
-      "✅ 데이터 수집 완료\n",
-      "⚠️ 가져온 데이터가 없습니다.\n"
+      "{\"schema\": {\"fields\": [{\"number\": 1, \"column_code\": \"SN\", \"column_name\": \"\\uc21c\\ubc88\", \"data_type\": \"decimal\", \"column_desc\": \"\\uc790\\uccb4 \\uc2dc\\ub9ac\\uc5bc\\ud55c \\ubc88\\ud638\"}, {\"number\": 2, \"column_code\": \"SINGU_CODE_NM\", \"column_name\": \"\\uc2e0\\uad6c \\ucf54\\ub4dc \\uba85\", \"data_type\": \"string\", \"column_desc\": \"\\ud45c\\uc900\\uc0b0\\uc5c5\\ubd84\\ub958\\ucf54\\ub4dc\\uac00 \\uacfc\\uac70\\ubc84\\uc804\\uc778\\uc9c0 \\uc2e0\\uaddc\\ubc84\\uc804\\uc778\\uc9c0 \\ud655\\uc778\\uc6a9\"}, {\"number\": 3, \"column_code\": \"WAGE_NM\", \"column_name\": \"\\uc784\\uae08 \\uba85\", \"data_type\": \"string\", \"column_desc\": \"\\uba85\\ubaa9\\uc784\\uae08\\uc744 \\ucf54\\ub4dc\\ud654 \\ud55c \\uac12\"}, {\"number\": 4, \"column_code\": \"INDUST_CL_NM\", \"column_name\": \"\\uc0b0\\uc5c5 \\ubd84\\ub958 \\uba85\", \"data_type\": \"string\", \"column_desc\": \"1\\uc778\\ub2f9, \\uc2dc\\uac04\\ub2f9 \\ubd84\\ub958\\ub97c \\ucf54\\ub4dc\\ud654\"}, {\"number\": 5, \"column_code\": \"KSIC_NM\", \"column_name\": \"\\ud55c\\uad6d\\ud45c\\uc900\\uc0b0\\uc5c5\\ubd84\\ub958 \\uba85\", \"data_type\": \"string\", \"column_desc\": \"\\ud55c\\uad6d\\ud45c\\uc900\\uc0b0\\uc5c5\\ubd84\\ub958\\ucf54\\ub4dc\\uc758 \\ub300,\\uc911,\\uc18c \\ubd84\\ub958\\ucf54\\ub4dc\"}, {\"number\": 6, \"column_code\": \"CRRSPND_YEAR\", \"column_name\": \"\\ud574\\ub2f9 \\ub144\\ub3c4\", \"data_type\": \"string\", \"column_desc\": \"\\ud1b5\\uacc4 \\ud56d\\ubaa9\\uc5d0 \\ub300\\ud55c \\uae30\\uc900\\ub144\\ub3c4\"}, {\"number\": 7, \"column_code\": \"KSIC_IEM_NM\", \"column_name\": \"\\ud55c\\uad6d\\ud45c\\uc900\\uc0b0\\uc5c5\\ubd84\\ub958 \\ud56d\\ubaa9 \\uba85\", \"data_type\": \"string\", \"column_desc\": \"\\ud55c\\uad6d\\ud45c\\uc900\\uc0b0\\uc5c5\\ubd84\\ub958 \\ucf54\\ub4dc\\uc758 \\ub300\\ubd84\\ub958 \\ucf54\\ub4dc\"}, {\"number\": 8, \"column_code\": \"KSIC_DETAIL_IEM_NM\", \"column_name\": \"\\ud55c\\uad6d\\ud45c\\uc900\\uc0b0\\uc5c5\\ubd84\\ub958 \\uc0c1\\uc138 \\ud56d\\ubaa9 \\uba85\", \"data_type\": \"string\", \"column_desc\": \"\\ud55c\\uad6d\\ud45c\\uc900\\uc0b0\\uc5c5\\uc758 \\uc911\\ubd84\\ub958 \\ud56d\\ubaa9\"}, {\"number\": 9, \"column_code\": \"ONE_QUART_IDEX\", \"column_name\": \"1 \\ubd84\\uae30 \\uc9c0\\uc218\", \"data_type\": \"decimal\", \"column_desc\": \"1\\ubd84\\uae30\\uc5d0 \\ub300\\ud55c \\uc9c0\\uc218 \\uac12\"}, {\"number\": 10, \"column_code\": \"TWO_QUART_IDEX\", \"column_name\": \"2 \\ubd84\\uae30 \\uc9c0\\uc218\", \"data_type\": \"decimal\", \"column_desc\": \"2\\ubd84\\uae30\\uc5d0 \\ub300\\ud55c \\uc9c0\\uc218 \\uac12\"}, {\"number\": 11, \"column_code\": \"THREE_QUART_IDEX\", \"column_name\": \"3 \\ubd84\\uae30 \\uc9c0\\uc218\", \"data_type\": \"decimal\", \"column_desc\": \"3\\ubd84\\uae30\\uc5d0 \\ub300\\ud55c \\uc9c0\\uc218 \\uac12\"}, {\"number\": 12, \"column_code\": \"FOUR_QUART_IDEX\", \"column_name\": \"4 \\ubd84\\uae30 \\uc9c0\\uc218\", \"data_type\": \"decimal\", \"column_desc\": \"4\\ubd84\\uae30\\uc5d0 \\ub300\\ud55c \\uc9c0\\uc218 \\uac12\"}, {\"number\": 13, \"column_code\": \"TOT_IDEX\", \"column_name\": \"\\ucd1d \\uc9c0\\uc218\", \"data_type\": \"decimal\", \"column_desc\": \"\\ud574\\ub2f9\\ub144\\ub3c4\\uc5d0 \\ub300\\ud55c \\ucd1d \\uc9c0\\uc218\\uac12\"}, {\"number\": 14, \"column_code\": \"CREAT_DT\", \"column_name\": \"\\uc0dd\\uc131 \\uc77c\\uc2dc\", \"data_type\": \"date\", \"column_desc\": \"\\ub370\\uc774\\ud130 \\uc0dd\\uc131 \\uc77c\\uc2dc\"}, {\"number\": 15, \"column_code\": \"UPDT_DT\", \"column_name\": \"\\uc218\\uc815 \\uc77c\\uc2dc\", \"data_type\": \"date\", \"column_desc\": \"\\ub370\\uc774\\ud130\\uc5d0 \\ub300\\ud55c \\ucd5c\\uc885\\uc218\\uc815\\uc77c\\uc2dc\"}]}, \"data\": []}\n"
      ]
     }
    ],
    "source": [
-    "import requests\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import time\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv()\n",
-    "api_key = os.getenv(\"wholesale_retail_business_key\")\n",
-    "\n",
-    "if not api_key:\n",
-    "    raise ValueError(\"❌ .env에 'wholesale_retail_business_key'가 없습니다.\")\n",
-    "\n",
-    "url = \"https://dataapi.wehago.com/data/\"\n",
-    "headers = {\"apicode\": api_key}\n",
-    "\n",
-    "all_data = []\n",
-    "start = 0\n",
-    "chunk = 500\n",
-    "\n",
-    "print(\"📦 데이터 수집 시작\")\n",
-    "\n",
-    "while True:\n",
-    "    params = {\n",
-    "        \"dataset_key\": \"DATASET_SUNDO_52\",\n",
-    "        \"from\": start,\n",
-    "        \"to\": start + chunk - 1\n",
-    "    }\n",
-    "\n",
-    "    print(f\"→ 요청 구간: {start} ~ {start + chunk - 1}\")\n",
-    "\n",
-    "    r = requests.get(url, headers=headers, params=params)\n",
-    "\n",
-    "    if r.status_code != 200:\n",
-    "        print(\"❌ 요청 실패:\", r.text)\n",
-    "        break\n",
-    "\n",
-    "    part = r.json().get(\"data\")\n",
-    "\n",
-    "    if not part:\n",
-    "        print(\"✅ 데이터 수집 완료\")\n",
-    "        break\n",
-    "\n",
-    "    all_data.extend(part)\n",
-    "    start += chunk\n",
-    "    time.sleep(0.1)\n",
-    "\n",
-    "if all_data:\n",
-    "    df = pd.DataFrame(all_data)\n",
-    "\n",
-    "    # ✅ 저장 파일명 변경 완료\n",
-    "    df.to_csv(\"읍면동_도소매업.csv\", index=False, encoding=\"utf-8-sig\")\n",
-    "\n",
-    "    print(f\"🎉 저장 완료 → 읍면동_도소매업.csv (총 {len(df)} 행)\")\n",
-    "    df.head()\n",
-    "else:\n",
-    "    print(\"⚠️ 가져온 데이터가 없습니다.\")"
+    "r = requests.get(BASE_URL, headers=headers, params=params)\n",
+    "print(r.text)   # ← 이거 추가"
    ]
   },
   {
