데이터 정규화강의 수강중

--- a/second_week/11_18_studying.ipynb
+++ b/second_week/11_18_studying.ipynb
@@ -537,6 +537,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1aaa6951",
+   "metadata": {},
+   "source": [
+    "- 3차원 시계열 데이터 시퀀스 길이 7일 + 24시간 = 168시간\n",
+    "- 커널의 길이 7, 스트라이드 3, 정보 인코딩 32 output\n",
+    "- convolution 1d\n",
+    "- RNN - 셀선택: RNN, <GRU>, LSTM, 인코딩 32output\n",
+    "- RNN의 마지막 시퀀스 output >FC> 24개의 미세먼지 농도 예측\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ac22c6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1fe7e57c",
